tests/error/comptime_expr_errors/guppy_type_in_comptime2.err
Error: Invalid comptime expression (at $FILE:11:20)
   | 
 9 | @compile_guppy
10 | def foo1() -> int:
11 |     return comptime(Enum.VariantA(1))
   |                     ^^^^^^^^^^^^^^^^ Cannot use a Guppy object in a comptime expression

Function `VariantA` may only be called in a Guppy context

Comptime expressions are evaluated as plain Python. Guppy functions and types
require a Guppy context and cannot be called inside `comptime`.

Guppy compilation failed due to 1 previous error
